<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.dhbw.rahmlab</groupId>
	<artifactId>GeomAlgeLang</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<skipTests>false</skipTests>
		<graalvm.version>22.0.0.2</graalvm.version>
	</properties>
	<repositories>
		<repository>
			<id>1. Maven Central</id>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>2. jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>
	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.antlr/antlr4-maven-plugin -->
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-maven-plugin</artifactId>
			<version>4.9.3</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.8.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.graalvm.truffle</groupId>
			<artifactId>truffle-api</artifactId>
			<version>${graalvm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.graalvm.truffle</groupId>
			<artifactId>truffle-dsl-processor</artifactId>
			<version>${graalvm.version}</version>
		</dependency>
		<dependency>
			<!-- https://www.graalvm.org/22.0/reference-manual/embed-languages/#dependency-setup -->
			<groupId>org.graalvm.sdk</groupId>
			<artifactId>graal-sdk</artifactId>
			<version>${graalvm.version}</version>
		</dependency>
		<dependency>
			<groupId>com.github.JogAmp</groupId>
			<artifactId>vecmath</artifactId>
			<version>1.7.0-final</version>
		</dependency>
		<dependency>
			<groupId>de.orat.math.cga</groupId>
			<artifactId>ConformalGeometricAlgebra</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<!-- indirect dependency introduced via ConformalGeometricAlgebra -->
		<dependency>
			<groupId>de.orat.math.ga</groupId>
			<artifactId>GeometricAlgebra</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.antlr</groupId>
				<artifactId>antlr4-maven-plugin</artifactId>
				<version>4.9.3</version>
				<configuration>
					<listener>true</listener>
					<visitor>true</visitor>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>antlr4</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M6</version>
				<configuration>
					<skipTests>${skipTests}</skipTests>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>org.graalvm.truffle/com.oracle.truffle.api.exception=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
